tests/baselines/reference/decoratorOnClassMethod10.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod10.ts(4,6): error TS2736: Type 'C' is missing the following properties from type 'Function': apply, call, bind, prototype, and 3 more.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod10.ts (1 errors) ====
    declare function dec(target: Function, paramIndex: number): void;
    
    class C {
        @dec method() {}
         ~~~
!!! error TS2736: Type 'C' is missing the following properties from type 'Function': apply, call, bind, prototype, and 3 more.
    }